--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.18.3",
     "lucide-react": "^0.344.0",
-    "mongodb": "^x.x.x",
+    "mongodb": "^6.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swagger-ui-express": "^5.0.1",
