Simplify Vercel configuration

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+VITE_API_URL=https://auto-sphere.vercel.app/api
 MONGODB_URI=mongodb+srv://user1:user1@cluster0.8xtta.mongodb.net/?retryWrites=true&w=majority
 MONGODB_DB_NAME=cluster0
