--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,5 @@
   ],
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "vite",
-  "regions": ["fra1"]
+  "framework": "vite"
 } 
