Add configuration files

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
-VITE_API_URL=https://auto-sphere.vercel.app/api
+# MongoDB Connection
 MONGODB_URI=mongodb+srv://user1:user1@cluster0.8xtta.mongodb.net/?retryWrites=true&w=majority
 MONGODB_DB_NAME=cluster0
+
+# API URL (שים לב להחליף ל-URL של הדיפלוי שלך)
+VITE_API_URL=https://auto-sphere.vercel.app/api
+
+# Node Environment
+NODE_ENV=production
