Fix project structure and configuration

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 MONGODB_URI=mongodb+srv://user1:user1@cluster0.8xtta.mongodb.net/?retryWrites=true&w=majority
 MONGODB_DB_NAME=cluster0
 
-# API URL (שים לב להחליף ל-URL של הדיפלוי שלך)
+# API URL
 VITE_API_URL=https://auto-sphere.vercel.app/api
 
 # Node Environment
