--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,18 @@
 {
   "version": 2,
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/"
-    }
-  ],
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
+  "rewrites": [
+    { 
+      "source": "/api/:path*",
+      "destination": "http://localhost:3001/api/:path*"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
   "env": {
     "MONGODB_URI": "@mongodb_uri",
     "MONGODB_DB_NAME": "@mongodb_db_name",
