Update deployment configuration and add logs

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ MONGODB_URI=mongodb+srv://user1:user1@cluster0.8xtta.mongodb.net/?retryWrites=tr
 MONGODB_DB_NAME=cluster0
 
 # API URL
-VITE_API_URL=/api
+VITE_API_URL=https://auto-sphere-api.vercel.app/api
 
 # Node Environment
 NODE_ENV=production
