--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "auto-sphere",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,20 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/mongodb": "^4.0.6",
-    "dotenv": "^16.4.7",
-    "lucide-react": "^0.344.0",
-    "mongodb": "^6.13.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "lucide-react": "^0.344.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
