--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
   "framework": "vite",
   "rewrites": [
     { 
-      "source": "/api/(.*)",
-      "destination": "https://auto-sphere-api.vercel.app/api/$1"
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
     },
     {
       "source": "/(.*)",
